Update WhatsApp link and Instagram handle

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <section class="hero">
   <h2>Realce sua beleza 🌸</h2>
-  <a class="btn-whatsapp" href="https://wa.me/55SEUNUMERO" target="_blank">
+  <a class="btn-whatsapp" href="https://wa.me/5591985144347" target="_blank">
     Comprar pelo WhatsApp
   </a>
 </section>
@@ -40,9 +40,9 @@
 <section id="contato">
   <h2>Contato</h2>
   <p>
-    📱 WhatsApp: <a href="https://wa.me/55SEUNUMERO">Clique aqui</a><br>
+    📱 WhatsApp: <a href="https://wa.me/5591985144347">Clique aqui</a><br>
     📸 Instagram:
-    <a href="https://instagram.com/SEUINSTAGRAM" target="_blank">@bellaflor</a>
+    <a href="https://instagram.com/SEUINSTAGRAM" target="_blank">@minha_bellaflor.store</a>
   </p>
 </section>
 
