--- a/index.html
+++ b/index.html
@@ -62,4 +62,7 @@
 
 <script src="script.js"></script>
 </body>
+  <div id="carrinho-btn" onclick="abrirCarrinho()">
+  🛒 <span id="contador-carrinho">0</span>
+  </div>
 </html>
