--- a/index.html
+++ b/index.html
@@ -59,7 +59,26 @@
 <footer>
   <p>© 2025 Bella Flor Moda Feminina</p>
 </footer>
+<!-- BOTÃO CARRINHO -->
+<div id="carrinho-btn">
+  🛒 <span id="contador-carrinho">0</span>
+</div>
 
+<!-- MODAL DO PRODUTO -->
+<div id="modal" style="display:none" class="modal">
+  <div class="modal-conteudo">
+    <h3 id="modal-nome"></h3>
+
+    <label>Cor:</label>
+    <select id="cor"></select>
+
+    <label>Tamanho:</label>
+    <select id="tamanho"></select>
+
+    <button onclick="adicionarCarrinho()">Adicionar ao carrinho</button>
+    <button onclick="fecharModal()">Cancelar</button>
+  </div>
+</div>
 <script src="script.js"></script>
 </body>
   <div id="carrinho-btn" onclick="abrirCarrinho()">
