--- a/index.html
+++ b/index.html
@@ -80,7 +80,16 @@
     <button onclick="fecharModal()">Cancelar</button>
   </div>
 </div>
+<div id="modal-carrinho" class="modal" style="display:none">
+  <div class="modal-conteudo">
+    <h3>🛒 Meu Carrinho</h3>
 
+    <div id="lista-carrinho"></div>
+
+    <button onclick="finalizarWhatsApp()">Finalizar no WhatsApp</button>
+    <button onclick="fecharCarrinho()">Fechar</button>
+  </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
