--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
     <button onclick="finalizarWhatsApp()">Finalizar no WhatsApp</button>
     <button onclick="fecharCarrinho()">Fechar</button>
   </div>
-</div>
-
+<!-- Scripts JS -->
+<script src="produtos.js"></script>
 <script src="script.js"></script>
+</body>
+                                                                 </html>
 </body>
 </html>
